@@ -195,6 +195,14 @@ if test x$enable_threaded_system = xyes; then
 	CFLAGS="$CFLAGS -DUSE_SYSTEM_THREAD"
 fi
 
+dnl Disable using a thread for the video callback
+AC_ARG_ENABLE(video-callback-thread,
+[  --enable-video-callback-thread enable video callback thread [default=yes]],
+              , enable_video_callback_thread=yes)
+if test x$enable_video_callback_thread = xno; then
+	CFLAGS="$CFLAGS -DDISABLE_VIDEO_CALLBACK_THREAD"
+fi
+
 dnl Enable threaded audio
 AC_ARG_ENABLE(threaded-audio,
 [  --enable-threaded-audio  enable threaded audio        [default=yes]],
